--- a/rankings.html
+++ b/rankings.html
@@ -184,6 +184,7 @@ export class StockToolbar extends LitElement {
   constructor() {
     super();
     this.stocks = [];
+    this.items = [];
     this.isTop = true;
 
     var url = 'https://cf.tradeaudit.app/stocks/top';
