--- a/rankings.html
+++ b/rankings.html
@@ -262,6 +262,7 @@ export class StockToolbar extends LitElement {
 
   render() {
     const staticitems = this.stocks.slice(0, 10);
+    const selectedDropDown = (this.dropdownitem == null || this.staticitems.findIndex(o => o.symbol == this.dropdownitem.symbol) > -1)? null : this.dropdownitem;
     return html`
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -307,9 +308,9 @@ export class StockToolbar extends LitElement {
             <button 
               @click=${() => this.show = !this.show} id="testbtn"
               class="btn btn-outline-secondary ${this.dropdownitem != null && this.dropdownitem.symbol == this.selectedStockSymbol ? 'active' : ''}" type="button"
-              title="${this.dropdownitem == null ? '' : this.dropdownitem.name}" data-bs-toggle="tooltip" data-bs-placement="top" style="width:65pt"
+              title="${selectedDropDown == null ? "Select Stock" : selectedDropDown.name}" data-bs-toggle="tooltip" data-bs-placement="top" style="width:65pt"
             >
-              ${this.selectedStockSymbol ?? "?"}
+              ${selectedDropDown == null ? "?" : selectedDropDown.symbol}
             </button>            
         </div>
         <user-summary height="80" .selectedStockSymbol=${this.selectedStockSymbol} .usersummaries=${this.usersummaries}></user-summary>
