--- a/rankings.html
+++ b/rankings.html
@@ -192,11 +192,11 @@ export class StockToolbar extends LitElement {
     document.addEventListener("click", (e) => {
       // Check if the filter list parent element exist
       const isDropdownClosest = e.target.closest("#myDropdown");
-      const isBtnClosest = e.target.closest("#testbtn");
+      const isToolbarClosest = e.target.closest("stock-toolbar");
 
       // If `isClosest` equals falsy & popup has the class `show`
       // then hide the popup
-      if (!(isClosest || isBtnClosest) && this.show) {
+      if (!isClosest && !isToolbarClosest && this.show) {
         this.show = false;
         this.requestUpdate();
       }
