--- a/rankings.html
+++ b/rankings.html
@@ -187,7 +187,7 @@ export class StockToolbar extends LitElement {
     this.items = [];
     this.isTop = true;
 
-    var url = 'https://cf.tradeaudit.app/stocks/top';
+    var url = 'https://cf.tradeaudit.app/stocks';
 
     document.addEventListener("click", (e) => {
       // Check if the filter list parent element exist
