--- a/rankings.html
+++ b/rankings.html
@@ -376,16 +376,4 @@ customElements.define('stock-toolbar', StockToolbar);
 
 <stock-toolbar></stock-toolbar>
 
-<div style="flex-grow:1;display:inline-flex;align-self:stretch;">
-  <span class="lead" style="text-align:center;text-justify:inter-word;margin:auto">
-      <p class="mt-5 fw-bold">
-        Browse all of your Twitter follows in the TradeAudit mobile app
-      </p>
-      <p>
-        See how your favourites stack up on real world performance.
-      </p>
-      <div class="text-center">
-        <img alt="Get it on Google Play" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60px">
-      </div>
-  </span>
-</div>
+{% include appstorelink.html %}
