--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ author_profile: false
 Browse the Fintwit user rankings to find your favourite follow
 
 <div class="d-grid gap-2 col-6 mx-auto">
-  <a href="#link" class="btn btn-primary" role="button">TradeAudit User Rankings</a>
+  <a href="/rankings" class="btn btn-primary" role="button">TradeAudit User Rankings</a>
 </div>
 
 {% include appstorelink.html %}
