--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@ author_profile: false
 
 <h1 class="display-5 fw-bold text-center">Stock Tracking for Financial Twitter</h1>
 
-<span class="lead mb-4" style="text-align: justify;text-justify: inter-word;">
+<span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
   <span class="text-center">
     Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is 
     full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>.
-  </span>
+  </span><br/>
   They curate twitter feeds to promote successful trading but hide losses by deleting tweets and posting misinformation.
   Do your due diligence and audit trading records before you invest your time and money.
 </span>
 
 <h2 class="display-6 fw-bold text-center">User Rankings</h1>
 
-Browse the Fintwit user rankings to find your favourite follow
+<span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
+  <span class="text-center">
+    Browse the Fintwit user rankings to find your favourite follow.
+  </span>
+</span>
 
 <div class="d-grid gap-2 col-6 mx-auto">
   <a href="/rankings" class="btn btn-primary" role="button">TradeAudit User Rankings</a>
