--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ author_profile: false
 </span>
 
 <div class="d-grid gap-2 col-10 mx-auto mb-4 mt-4">
-  <a href="/rankings" class="btn btn-primary" role="button">See TradeAudit User Rankings</a>
+  <a href="/rankings" class="btn btn-primary btn-lg" role="button">See Trade Audit User Rankings</a>
 </div>
 
 {% include appstorelink.html %}
