--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@ author_profile: false
   Do your due diligence and audit trading records before you invest your time and money.
 </span>
 
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));</script>
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Fintwit really is a delusional place.</p>&mdash; Rudy Havenstein (Checkmark Goes Here) (@RudyHavenstein) <a href="https://twitter.com/RudyHavenstein/status/1586061354271526912?ref_src=twsrc%5Etfw">October 28, 2022</a></blockquote>
+
+
+
 <div class="d-grid gap-2 col-10 mx-auto mb-4 mt-4">
   <a href="/rankings" class="btn btn-primary btn-lg" role="button">See Trade Audit User Rankings</a>
 </div>
