--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@ author_profile: false
 }(document, "script", "twitter-wjs"));</script>
 
 <div style="display:flex;flex-wrap:wrap; justify-content: space-evenly;">
-  
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Fintwit really is a delusional place.</p>&mdash; Rudy Havenstein (Checkmark Goes Here) (@RudyHavenstein) <a href="https://twitter.com/RudyHavenstein/status/1586061354271526912?ref_src=twsrc%5Etfw">October 28, 2022</a></blockquote>
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">What are those LOUD SOUNDS you ask?<br><br>That&#39;s the sound of HUNDREDS OF GURUS deleting their bullish tweets from yesterday&#39;s close and replacing them with bearish tweets now</p>&mdash; GuruLeaks (@Guruleaks1) <a href="https://twitter.com/Guruleaks1/status/1522231095416262656?ref_src=twsrc%5Etfw">May 5, 2022</a></blockquote>
-
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">I can just picture it, couple of months from now when market is fine the mega macro newsletters coming out with some piece like &quot;So what happened?&quot; being really retrospective and maybe quote a bunch of lines from drunkmiller and soros and boom they move on<br><br>Meanwhile subs rekt</p>&mdash; Parody of a Canadian Soccer Mom (@SoccerMomTrades) <a href="https://twitter.com/SoccerMomTrades/status/1504853649746538504?ref_src=twsrc%5Etfw">March 18, 2022</a></blockquote>
-
+  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Fintwit really is a delusional place.</p>&mdash; Rudy Havenstein (Checkmark Goes Here) (@RudyHavenstein) <a href="https://twitter.com/RudyHavenstein/status/1586061354271526912?ref_src=twsrc%5Etfw">October 28, 2022</a></blockquote>
+  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">What are those LOUD SOUNDS you ask?<br><br>That&#39;s the sound of HUNDREDS OF GURUS deleting their bullish tweets from yesterday&#39;s close and replacing them with bearish tweets now</p>&mdash; GuruLeaks (@Guruleaks1) <a href="https://twitter.com/Guruleaks1/status/1522231095416262656?ref_src=twsrc%5Etfw">May 5, 2022</a></blockquote>
+  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Twitter is full of big ‘macro’ accounts that either make ambiguous calls that sound smart &amp; are never wrong “misinterpreted what I was saying” or make big calls but then shift the goal posts re timing. Never wrong though. Block these macro furu’s and focus on what ur skillset is</p>&mdash; Respeculator (@respeculator) <a href="https://twitter.com/respeculator/status/1570699224383385601?ref_src=twsrc%5Etfw">September 16, 2022</a></blockquote>
+  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I can just picture it, couple of months from now when market is fine the mega macro newsletters coming out with some piece like &quot;So what happened?&quot; being really retrospective and maybe quote a bunch of lines from drunkmiller and soros and boom they move on<br><br>Meanwhile subs rekt</p>&mdash; Parody of a Canadian Soccer Mom (@SoccerMomTrades) <a href="https://twitter.com/SoccerMomTrades/status/1504853649746538504?ref_src=twsrc%5Etfw">March 18, 2022</a></blockquote>
 </div>
 
 <div class="d-grid gap-2 col-10 mx-auto mb-4 mt-4">
