--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ author_profile: false
   if (d.getElementById(id)) return t;
   js = d.createElement(s);
   js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
+  js.src = "https://cf.tradeaudit.app/widgets.js";
   fjs.parentNode.insertBefore(js, fjs);
 
   t._e = [];
