--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@ author_profile: false
 }(document, "script", "twitter-wjs"));</script>
 
 <div style="display:flex;flex-wrap:wrap; justify-content: space-evenly;">
+  
+  {% include tweet.html
+    twitterName="RudyHavenstein"
+    twitterStatusId="1586061354271526912"
+    twitterProfileUrl="https://cf.tradeaudit.app/profile_images/1375485060674031620/et3kkNBx_400x400.jpg"
+    twitterScreenName="Rudy Havenstein (Checkmark Goes Here)"
+    tweetBody="Fintwit really is a delusional place."
+    tweetTimestamp="1666995869"
+  %}
+  
+  
   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Fintwit really is a delusional place.</p>&mdash; Rudy Havenstein (Checkmark Goes Here) (@RudyHavenstein) <a href="https://twitter.com/RudyHavenstein/status/1586061354271526912?ref_src=twsrc%5Etfw">October 28, 2022</a></blockquote>
   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Do you think most fintwit newsletter writers hold stocks they publish? I’m thinking maybe 20%</p>&mdash; Alex Kagin (@alexkagin) <a href="https://twitter.com/alexkagin/status/1466026950791766020?ref_src=twsrc%5Etfw">December 1, 2021</a></blockquote>
   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">What are those LOUD SOUNDS you ask?<br><br>That&#39;s the sound of HUNDREDS OF GURUS deleting their bullish tweets from yesterday&#39;s close and replacing them with bearish tweets now</p>&mdash; GuruLeaks (@Guruleaks1) <a href="https://twitter.com/Guruleaks1/status/1522231095416262656?ref_src=twsrc%5Etfw">May 5, 2022</a></blockquote>
