--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ export class TwitterTweet extends LitElement {
       border-radius: 8px;
       overflow: hidden;
       border: 1px solid;
+      width: 548px;
+      margin-bottom: 2em;
     }
 
     #retweet {
@@ -113,10 +115,6 @@ export class TwitterTweet extends LitElement {
       overflow-wrap: break-word;
     }
 
-    #text.short {
-      font-size: 2em;
-    }
-
     #footer {
       display: flex;
       justify-content: space-between;
@@ -170,6 +168,7 @@ export class TwitterTweet extends LitElement {
   `;
   
   render() {
+    const date = new Date(this.created_at);
     return html`
       <div id="container">
         <div id="content">
@@ -191,8 +190,8 @@ export class TwitterTweet extends LitElement {
               </a>
             </div>
           </div>
-          <div id="text" class="short">
-            ${ this.text }
+          <div id="text">
+            ${ this.text.replaceAll('\n', '<br>') }
           </div>
           <div id="footer">
             <div id="actions">
@@ -208,7 +207,7 @@ export class TwitterTweet extends LitElement {
             </div>
             <div id="link">
               <a target="_blank" rel="noopener" href="https://twitter.com/${ this.user_screen_name }/status/${ this.id_str }">
-                ${ this.created_at }
+                ${ date.toLocaleTimeString(undefined, { hour: 'numeric', minute: 'numeric' }) } · ${ date.toLocaleDateString(undefined, { year: 'numeric', month: 'short', day: 'numeric' }) }
               </a>
             </div>
           </div>
