--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ export class TwitterTweet extends LitElement {
             </div>
           </div>
           <div id="text">
-            ${ this.text.replaceAll('\n', '<br>') }
+            ${ this.text.replaceAll('\\n', '<br>') }
           </div>
           <div id="footer">
             <div id="actions">
