--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@ export class TwitterTweet extends LitElement {
   render() {
     
     function parseNewlines(body){
-      const index = body.indexOf("\n");
+      const index = body.indexOf("\\n");
       if(index == -1) return body;
-      else return html`${body.substring(0,index)}<br>${parseNewlines(body.substring(index + 1))}`;
+      else return html`${body.substring(0,index)}<br>${parseNewlines(body.substring(index + 2))}`;
     }
     
     const date = new Date(this.created_at);
