--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@ export class TwitterTweet extends LitElement {
       width: 600px;
       margin-bottom: 2em;
     }
+    
+    @media only screen and (max-width: 1200px) {
+      #container {
+        width: 800px;
+      }
+    }
 
     #retweet {
       font-size: 0.75em;
