--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ customElements.define('twitter-tweet', TwitterTweet);
 <div style="display:flex;flex-wrap:wrap; justify-content: space-evenly;">
   <twitter-tweet 
     user_screen_name="RudyHavenstein"
-    user_name="Rudy Havenstein (Checkmark Goes Here)"
+    user_name="Rudy Havenstein"
     id_str="1586061354271526912"
     profile_image_url_https="https://tradeaudit.app/assets/profile_images/et3kkNBx_normal.jpg"
     text="Fintwit really is a delusional place."
