--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ customElements.define('twitter-tweet', TwitterTweet);
 </div>
 
 <div class="d-grid gap-2 col-10 mx-auto mb-4 mt-4">
-  <a href="/rankings" class="btn btn-primary btn-lg" role="button">See Trade Audit User Rankings</a>
+  <a href="/rankings" class="btn btn-primary btn-lg" role="button" style="--bs-btn-font-size:2.5rem">See Trade Audit User Rankings</a>
 </div>
 
 {% include appstorelink.html %}
