--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ export class TwitterTweet extends LitElement {
     verified: { type: Boolean },
     id_str: { type: String },
     text: { type: String },
+    link: { type: String },
     created_at: { type: String },
   };
   
@@ -205,6 +206,7 @@ export class TwitterTweet extends LitElement {
           </div>
           <div id="text">
             ${ parseNewlines(this.text) }
+            ${ this.link ? html`<br><br><a href="${this.link}" target="_blank">${this.link}</a>` : null
           </div>
           <div id="footer">
             <div id="actions">
