--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ export class TwitterTweet extends LitElement {
           </div>
           <div id="text">
             ${ parseNewlines(this.text) }
-            ${ this.link ? html`<br><br><a href="${this.link}" target="_blank">${this.link}</a>` : null
+            ${ this.link ? html`<br><br><a href="${this.link}" target="_blank">${this.link}</a>` : null }
           </div>
           <div id="footer">
             <div id="actions">
