--- a/rankings.html
+++ b/rankings.html
@@ -1,7 +1,7 @@
 ---
 layout: empty
 permalink: /rankings
-title: "TradeAudit App for Fintwit"
+title: "Trade Audit User Rankings for Fintwit"
 sitemap: true
 author_profile: false
 ---
