--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ export class TwitterTweet extends LitElement {
       overflow: hidden;
       border: 1px solid;
       margin-bottom: 2em;
+      background-color: #fff;
     }
     
     @media only screen and (min-width: 1400px) {
