--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -55,7 +55,7 @@ word-break: break-word !important;
     </div>
     <div><br></div>
     <div><span style="color: rgb(127, 127, 127);"><strong><span style="font-size: 15px;"><span
-            data-custom-class="subtitle">Last updated <bdt class="question">August 21, 2022</bdt></span></span></strong></span>
+            data-custom-class="subtitle">Last updated <bdt class="question">December 16, 2022</bdt></span></span></strong></span>
     </div>
     <div><br></div>
     <div><br></div>
@@ -1802,7 +1802,7 @@ word-break: break-word !important;
                                                                                                                                 <span style="font-size: 15px; color: rgb(89, 89, 89);"><span
                                                                                                                                         style="font-size: 15px; color: rgb(89, 89, 89);"><span
                                                                                                                                         data-custom-class="body_text"><bdt
-                                                                                                                                        class="block-component"></bdt>NO<bdt
+                                                                                                                                        class="block-component"></bdt>YES<bdt
                                                                                                                                         class="statement-end-if-in-editor"></bdt></span></span></span>
                                                                                                                             </div>
                                                                                                                             <div style="line-height: 1.5;">
