--- a/rankings.html
+++ b/rankings.html
@@ -247,7 +247,9 @@ export class StockToolbar extends LitElement {
         display: block;
     }
 
-    .dropdown a:hover {background-color: #ddd}
+    .dropdown a:hover {background-color: #ddd; }
+    .btn { --bs-btn-bg: #282739; --bs-btn-border-color: #282739; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #ed2c8a; } 
+    .btn.active { background-color: #6842cf; border-color: #6842cf; }
   `;
   
   filterFunction(e) {
