--- a/rankings.html
+++ b/rankings.html
@@ -318,7 +318,7 @@ export class StockToolbar extends LitElement {
                 </button>`
             )}
             <div id="myDropdown" class="dropdown-content display-6" style="max-width:1024px;margin-top:35pt;border-radius:1%;z-index:10;display:${this.show ? "block" : "none"};">
-              <input type="text" id="dropdownsearch" class="mb-2" placeholder="Search..." @input="${this.filterFunction}">
+              <input type="text" id="dropdownsearch" class="mb-2" placeholder="Search..." @input="${this.filterFunction}" ${this.show ? "autofocus" : ""}>
               <ul style="padding-left:0">
                 ${this.items.map(
                   (item) => 
